# gosdt-guesses

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
datasets/: README.md  monk1.csv  monk2.csv  tic-tac-toe.csv
examples/: compas.py  debug.py  iris.py  tutorial.ipynb
gosdt/model/: threshold_guess.py
scripts/: non_git.patch
scripts/gosdt/: README.md
scripts/gosdt-guesses/: README.md
src/: cli.cpp  libgosdt.cpp
src/gosdt/: __init__.py  _binarizer.py  _classifier.py  _threshold_guessing.py  _tree.py  _version.pyi
src/libgosdt/include/: bitmask.hpp  bitset.hpp  configuration.hpp  dataset.hpp  gosdt.hpp  graph.hpp  integrity_violation.hpp  local_state.hpp  matrix.hpp  message.hpp  model.hpp  optimizer.hpp  queue.hpp  task.hpp
src/libgosdt/include/utils/: logging.hpp
src/libgosdt/src/: bitmask.cpp  bitset.cpp  configuration.cpp  dataset.cpp  gosdt.cpp  graph.cpp  local_state.cpp  message.cpp  model.cpp  optimizer.cpp  queue.cpp  task.cpp
src/libgosdt/src/diagnosis/: false_convergence.cpp  non_convergence.cpp  trace.cpp
src/libgosdt/src/dispatch/: dispatch.cpp
src/libgosdt/src/extraction/: models.cpp
tests/: test_compatibility.py  test_gosdtbinarizer.py
